--- a/cssindex.css
+++ b/cssindex.css
@@ -3,3 +3,18 @@ body {
 	flex-direction: column;
 	align-items: center;
 }
+
+.mainpage {
+	display: flex;
+	max-width: 50em;
+	align-items: center;
+}
+
+h1 {
+	font-family: 'Lato', sans-serif;
+}
+
+a {
+	font-family: 'Roboto', sans-serif;
+	text-decoration: none;
+}
