slightly less ugly

--- a/cssindex.css
+++ b/cssindex.css
@@ -9,15 +9,22 @@ body {
 .mainpage {
 	max-width: 50em;
 	text-align: center;
+	margin: 3em;
 }
 
 h1 {
 	font-family: 'Lato', sans-serif;
 	font-style: bold;
 	color: #FF6B6B;
+	margin-bottom: 0.5em;
 }
 
 a {
 	text-decoration: none;
 	color: #4ECDC4;
+}
+
+#links a {
+	margin-left: 6em;
+	margin-right: 6em;
 }
