slightly less ugly

--- a/cssindex.css
+++ b/cssindex.css
@@ -1,4 +1,6 @@
 body {
+	background-image: url(dot-grid.png);
+	background-repeat: repeat;
 	display: flex;
 	font-family: 'Roboto', sans-serif;
 	color: #292F36;
