--- a/cssindex.css
+++ b/cssindex.css
@@ -49,7 +49,7 @@ a {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
-	min-width:8em;
+	width:8em;
 	text-align: center;
 	margin-top: 1.5em;
 }
