--- a/common.css
+++ b/common.css
@@ -1,3 +1,13 @@
+body {
+	background-image: url(whirlpool.png);
+	background-repeat: repeat;
+	display: flex;
+	font-family: 'Roboto', sans-serif;
+	color: #292F36;
+	flex-direction: column;
+	align-items: center;
+}
+
 .mainpage {
 	max-width: 35em;
 	text-align: center;
@@ -6,6 +16,7 @@
 
 h2 {
 	font-family: 'Lato', sans-serif;
+	font-size: 25pt;
 	font-style: bold;
 	margin-bottom: 0em;
 	color: #FF6B6B;
@@ -23,6 +34,7 @@ h3 {
 }
 
 h1 a {
+	font-size: 32pt;
 	font-family: 'Lato', sans-serif;
 	font-style: bold;
 	color: #FF6B6B;
@@ -34,13 +46,22 @@ a {
 	color: #4ECDC4;
 }
 
+#courses {
+	margin-top: 3em;
+	max-width: 35em;
+	margin-bottom: 3em;
+	text-align: left;
+}
+
 #links {
 	display: flex;
+	font-family: 'Karla', sans-serif;
+	font-size: 16pt;
 	flex-direction: row;
 	justify-content: space-between;
 	font-style: bold;
 	max-width: 100%;
-	min-width: 17em;
+	min-width: 14em;
 }
 
 #socialmediaicons {
@@ -50,6 +71,45 @@ a {
 	width:8em;
 	text-align: center;
 	margin-top: 1.5em;
+}
+
+
+.blog {
+	margin-top: 3em;
+	max-width: 35em;
+	text-align: left;
+}
+
+.image-gallery{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
+	flex-wrap: wrap;
+}
+
+.blog .post {
+	margin-top: 0em;
+	max-width: 100%;
+	border-bottom: solid;
+	border-color: #C1C1C1;
+	border-width: 0.1em;
+}
+
+.post {
+	margin-top: 3em;
+	margin-bottom: 3em;
+	max-width: 35em;
+	text-align: left;
+}
+
+#sandwich {
+	margin-top: 1em;
+	width: 100%;
+}
+
+#chelsea {
+	margin-top: 1em;
+	width: 100%;
 }
 
 #me {
