--- a/common.css
+++ b/common.css
@@ -68,6 +68,7 @@ a {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
+	align-items: center;
 	width:8em;
 	text-align: center;
 	margin-top: 1.5em;
